@@ -114,6 +114,14 @@ void frsky_proc_user_byte( uint8_t byte )
 						if ( Frsky_user_id < HUBDATALENGTH )
 						{
 						  FrskyHubData[Frsky_user_id] = ( byte << 8 ) + Frsky_user_lobyte ;
+							if ( Frsky_user_id == 16 )			// GPS Speed
+							{
+								if ( g_model.FrSkyGpsAlt )
+								{
+						  		FrskyHubData[Frsky_user_id] = FrskyHubData[1] ;		// Copy Gps Alt instead
+								}
+							}
+							
 							if ( Frsky_user_id == 17 )			// GPS Speed
 							{
 								if ( MaxGpsSpeed < FrskyHubData[Frsky_user_id] )
