@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "01.03.2012"
-#define TIME_STR "23:11:26"
-#define SUB_VERS 5647-Mike
+#define DATE_STR "18.03.2012"
+#define TIME_STR "14:02:07"
+#define SUB_VERS 5651-Mike
 #define SVN_VERS "er9x-r740"
 #define MOD_VERS "   "
